Restore bouncyness (need to make it configurable in the API), add equations to paper which I may never get around to finishing, and make the balls render better.

--- a/Paper/Paper.tex
+++ b/Paper/Paper.tex
@@ -275,4 +275,14 @@ After that, we can consider the influence of forces, and resolve collisions usin
 
 % Need to add citation for David Baraff here.
 
+\subsection{Resolving Collisions}
+
+\begin{equation}
+j = \frac{-(1+\epsilon)(n\cdot (v + r\omega))}{M^{-1}-(r\wedge n)^2/I}
+\end{equation}
+
+\begin{equation}
+j = \frac{-(1+\epsilon)v_{rel}^{-}}{M_a^{-1}+M_b^{-1}-(r_a\wedge n)^2/I_a - (r_b\wedge n)^2/I_b}
+\end{equation}
+
 \end{document}
